# synth-sound

./: README.md  pyproject.toml
src/: data-expl.ipynb  data-unpack.ipynb  extract-stems.ipynb  synthesizer.ipynb
